0030516: Visualization - Pointer to an OpenGl_Structure is deleted and accessed later after PrsMgr_Presentation::Highlight()

Do not set IsForHighlight flag for already displayed presentation.